--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@ body, .body {
 	color:#fff;
 	}
 input,form {
-	width:80%;
+	width:100%;
 	background:#ddd;
 	padding:10px;
 	}
@@ -39,7 +39,8 @@ input,form {
 	background :#ddd;
 	}
 .btn {
-	width:75%;
+   border: 2px #0275d8 solid;
+	width:95%;
 	padding:10px;
 	}
 h1, h2, h3, h4, h5, h6 {
@@ -58,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 		
 		<br><br>
 		<center>
-		<h2>File Upload Helper</h2>
+		<h3>Upload filenya disini</h3>
 		</center>
 		</div>
 	
@@ -68,7 +69,6 @@ h1, h2, h3, h4, h5, h6 {
       
       <div class="upload-btn">
  <center>
- <h5>Pilih File Kamu </h5>
  <form action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="files" class="btn" id="file" style="border-radius:10px 10px 0 0;" multiple>
             
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 </body>
 
 <!--footer-->
-<div style="position:fixed; font-family:sans-serif; opacity:0.5; bottom:0.5em; left:0.5em; font-size:10px;">
+<div style="position:fixed; font-family:sans-serif; opacity:0.3; bottom:0.5em; left:1em; font-size:8px;">
 mininproject.dev &copy;2022
 </div>
 
