--- a/views/berhasil.ejs
+++ b/views/berhasil.ejs
@@ -14,11 +14,11 @@ color:#fff;
 }
 </style>
 
-<h1>Upload Berhasil</h1>
+<h1>Upload Berhasil >///<</h1>
 
 
 
 <!--footer-->
-<div style="position:fixed; font-family:sans-serif; opacity:0.5; bottom:0.5em; left:0.5em; font-size:10px;">
+<div style="position:fixed; font-family:sans-serif; opacity:0.3; bottom:0.5em; left:0.5em; font-size:8px;">
 mininproject.dev &copy;2022
 </div>
